2010-02-03  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Remove COMPILE_ASSERT conflict with the underlying PLATFORM
        https://bugs.webkit.org/show_bug.cgi?id=34190

        COMPILE_ASSERT conflicts with the underlying PLATFORM because it is defined
        both in WTF's Assertions.h and BREWMP's AEEClassIDs.h. Include AEEClassIDs.h
        in Assertions.h and undef COMPILE_ASSERT to avoid redefining COMPILE_ASSERT.

        * wtf/Assertions.h:

2010-02-03  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Implement OwnPtrBrew to make sure BREW instances are freed.
        https://bugs.webkit.org/show_bug.cgi?id=34518

        Add OwnPtrBrew to release IFile, IFileMgr and IBitmap instances.

        * wtf/brew/OwnPtrBrew.cpp: Added.
        (WTF::IFileMgr):
        (WTF::IFile):
        (WTF::IBitmap):
        (WTF::freeOwnedPtrBrew):
        * wtf/brew/OwnPtrBrew.h: Added.
        (WTF::OwnPtrBrew::OwnPtrBrew):
        (WTF::OwnPtrBrew::~OwnPtrBrew):
        (WTF::OwnPtrBrew::get):
        (WTF::OwnPtrBrew::release):
        (WTF::OwnPtrBrew::outPtr):
        (WTF::OwnPtrBrew::set):
        (WTF::OwnPtrBrew::clear):
        (WTF::OwnPtrBrew::operator*):
        (WTF::OwnPtrBrew::operator->):
        (WTF::OwnPtrBrew::operator!):
        (WTF::OwnPtrBrew::operator UnspecifiedBoolType):
        (WTF::OwnPtrBrew::swap):
        (WTF::swap):
        (WTF::operator==):
        (WTF::operator!=):
        (WTF::getPtr):

2010-02-03  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Darin Adler.

        Export WTF::fastStrDup symbol
        https://bugs.webkit.org/show_bug.cgi?id=34526

        * JavaScriptCore.exp:

2010-02-03  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        [wx] Enable JIT compilation for wx.
        
        https://bugs.webkit.org/show_bug.cgi?id=34536

        * wtf/Platform.h:
