@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        [BREWMP] Define WTF_PLATFORM_BREWMP_SIMULATOR when AEE_SIMULATOR is defined
+        https://bugs.webkit.org/show_bug.cgi?id=34514
+
+        PLATFORM(BREWMP_SIMULATOR) guard is needed to make distinction between BREWMP
+        and BREWMP simulator.
+
+        * wtf/Platform.h:
+
+2010-02-03  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Eric Seidel.
+
         [BREWMP] Remove COMPILE_ASSERT conflict with the underlying PLATFORM
         https://bugs.webkit.org/show_bug.cgi?id=34190
 
